--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ function panMap(position){
 
 //CREATE AN AUDIO ELEMENT AND PLAY 
 function playAudio(track) {
+    alert("playing audio");
     var audio = document.getElementById('audio-player')
     audio.src = track;
     audio.play();
