--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
       <p id="demo"></p>
       <p id="msg"></p>
       <div id="mapholder"></div>
+      <audio controls id="player" src="WhiteChristmas.mp3"></audio>
     </div>
   </div>  
 </div>
-<audio id="player" src=""></audio>
+
 
 <script>
 var hotspot = {
@@ -222,7 +223,7 @@ function displayPositionCoords(position) {
 }
 
 buildAudio();
-playAudio(hotspot.onEnterPlayAudio);
+//playAudio(hotspot.onEnterPlayAudio);
 </script>
 
 
