--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@ function displayPositionCoords(position) {
   x.innerHTML = "Latitude: " + position.coords.latitude + "<br>Longitude: " + position.coords.longitude + "<br><br>";
 }
 
-buildAudio();
-//playAudio(hotspot.onEnterPlayAudio);
+//buildAudio();
+playAudio(hotspot.onEnterPlayAudio);
 </script>
 
 
