--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p id="msg"></p>
       <div id="mapholder"></div>
       <audio controls id="player" src="WhiteChristmas.mp3"></audio>
-      <button onclick="playAudio(hotspot.onEnterPlayAudio)" type="button" class="btn btn-primary">Primary</button>
+      <button onclick="playAudio(hotspot.onEnterPlayAudio)" type="button" class="btn-info">Primary</button>
     </div>
   </div>  
 </div>
