--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <p id="demo"></p>
       <p id="msg"></p>
       <p>
-      <button type="button" onclick="playAudio(hotspot.onEnterPlayAudio)" class=" .
+      <button type="button" onclick="queueAudio()" class=" .
       btn-block btn-primary">I am here</button>
     </p>
       <div id="mapholder"></div>
